CVV -> Elmurod Ziyovuddinov

--- a/src/Components/Contact/Contact.scss
+++ b/src/Components/Contact/Contact.scss
@@ -84,6 +84,7 @@
   }
   .contact__text {
     letter-spacing: 0.5px;
+    line-height: 1.5rem;
   }
   .contact__btns {
     flex-direction: column;
