CVV -> Elmurod Ziyovuddinov

--- a/src/Components/Portfolio/Portfolio.scss
+++ b/src/Components/Portfolio/Portfolio.scss
@@ -42,6 +42,7 @@
     font-weight: bold;
     font-size: 1.5rem;
     letter-spacing: 1px;
+    text-align: center;
   }
   &__img {
     width: 400px;
@@ -56,6 +57,7 @@
     font-weight: normal;
     font-size: 1rem;
     letter-spacing: 0.5px;
+    text-align: center;
   }
   a {
     text-decoration: none;
