CVV -> Elmurod Ziyovuddinov

--- a/src/Components/Portfolio/Portfolio.scss
+++ b/src/Components/Portfolio/Portfolio.scss
@@ -99,9 +99,8 @@
     padding-top: 8rem;
   }
   .portfolio__title {
-    width: 320px;
     font-size: 2rem;
-    border-bottom: 3px solid limegreen;
+    text-decoration: underline limegreen;
     margin: 0 auto 4rem;
   }
   .portfolio__list {
