--- a/src/Components/Contact/Contact.scss
+++ b/src/Components/Contact/Contact.scss
@@ -77,9 +77,8 @@
     padding-top: 8rem;
   }
   .contact__title {
-    width: 150px;
     font-size: 2.5rem;
-    border-bottom: 3px solid limegreen;
+    text-decoration: underline limegreen;
     margin: 0 auto;
   }
   .contact__text {
