--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -2,22 +2,20 @@
   width: 100%;
   background-color: rgba(33, 33, 33, 0.314);
   backdrop-filter: blur(6px);
-  padding: 3rem 0 1.5rem;
+  padding-bottom: 1rem;
   margin-top: 10rem;
 
   &__wrap {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
   }
   &__logo {
-    font-size: 2rem;
-    color: white;
-    span {
-      font-weight: bold;
-      color: limegreen;
-    }
+    width: 250px;
+    height: 110px;
+    object-fit: cover;
+    display: flex;
   }
   &__icons {
     display: flex;
@@ -54,7 +52,11 @@
 
 @media only screen and (max-width: 450px) {
   .footer {
-    padding: 2rem 0 1.5rem;
+    padding: 0.25rem 0 1rem;
     margin-top: 7rem;
+  }
+  .footer__logo {
+    width: 170px;
+    height: 100px;
   }
 }
