--- a/src/Components/Portfolio/Portfolio.scss
+++ b/src/Components/Portfolio/Portfolio.scss
@@ -54,8 +54,10 @@
     opacity: 0.7;
   }
   &__text {
+    width: 350px;
     font-weight: normal;
     font-size: 1rem;
+    line-height: 25px;
     letter-spacing: 0.5px;
     text-align: center;
   }
