--- a/src/Components/Skills/Skills.scss
+++ b/src/Components/Skills/Skills.scss
@@ -9,56 +9,66 @@
     color: white;
     margin-bottom: 3.5rem;
   }
+  &__display {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: 100px;
+  }
+  &__box {
+    width: 100%;
+  }
   &__wrap {
-    width: 50%;
-    height: 25px;
-    background-color: rgb(43, 43, 43);
+    width: 100%;
+    height: 30px;
+    background-color: rgb(40, 40, 40);
+    border-radius: 5px;
     margin: 1.5rem 0;
+    box-shadow: 5px 5px 10px rgb(80, 80, 80);
   }
   &__box1 {
-    width: 100%;
-    height: 25px;
+    width: 95%;
+    height: 30px;
     display: flex;
     align-items: center;
     background-color: limegreen;
+    border-radius: 5px;
   }
   &__box2 {
-    width: 85%;
-    height: 25px;
+    width: 90%;
+    height: 30px;
     display: flex;
     align-items: center;
     background-color: limegreen;
+    border-radius: 5px;
   }
   &__box3 {
-    width: 90%;
-    height: 25px;
+    width: 85%;
+    height: 30px;
     display: flex;
     align-items: center;
     background-color: limegreen;
+    border-radius: 5px;
   }
   &__box4 {
     width: 80%;
-    height: 25px;
+    height: 30px;
     display: flex;
     align-items: center;
     background-color: limegreen;
-  }
-  &__box5 {
-    width: 90%;
-    height: 25px;
-    display: flex;
-    align-items: center;
-    background-color: limegreen;
+    border-radius: 5px;
   }
   &__text {
-    width: 90px;
-    height: 25px;
+    width: 100px;
+    height: 30px;
     display: flex;
     align-items: center;
     font-weight: bold;
     font-size: 1rem;
+    letter-spacing: 1px;
     color: white;
     background-color: green;
+    border-radius: 5px;
     padding: 0 10px;
   }
 }
@@ -71,11 +81,12 @@
     font-size: 1.5rem;
     margin: 0 auto 2.5rem;
   }
-  .skills__wrap {
-    width: 95%;
-    margin: 1.5rem auto;
+  .skills__display {
+    display: block;
   }
   .skills__text {
+    width: 90px;
     font-weight: normal;
+    font-size: small;
   }
 }
